[package]
name = "faux_dom"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
faux_dom_macro = { path = "../faux_dom_macro" }
faux_dom_shared = { path = "../faux_dom_shared" }
