[package]
name = "faux_dom_macro"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.42", features = ["full"] }
faux_dom_shared = { path = "../faux_dom_shared" }
